@@ -162,3 +162,6 @@ frequently:
 - `housenumber-letters: true`: this key can be used to do micro-mapping, i.e. detect that e.g. 42/B
   is missing, even if 42/A is already mapped. (The default behavior is to ignore any noise after the
   numeric value of the house numbers.)
+
+- `alias: ["foo", "bar"]`: this key can be used on relations to specify old names. This way
+  bookmarks keep working, even in case a relation is renamed.
